--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -7,6 +7,13 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-
+        <Menu>
+            <MenuItem Header="Registros">
+                
+            </MenuItem>
+            <MenuItem Header="Consultas">
+                
+            </MenuItem>
+        </Menu>
     </Grid>
 </Window>
