Creacion del registro de aportes, creacion de la clase auxiliar Utilidades, diseño de la ventana del registro de aportes y enlazamiento de este registro con la ventana principal.

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -9,7 +9,7 @@
     <Grid>
         <Menu>
             <MenuItem Header="Registros">
-                
+                <MenuItem Header="Registro de Aportes" Click="MenuItem_Click"/>
             </MenuItem>
             <MenuItem Header="Consultas">
                 
