Creacion de la consulta de aportes, implementacion de la ventana de esta y enlazamiento de la misma con nuestro menu principal.

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -12,7 +12,7 @@
                 <MenuItem Header="Registro de Aportes" Click="MenuItem_Click"/>
             </MenuItem>
             <MenuItem Header="Consultas">
-                
+                <MenuItem Header="Consulta de Aportes" Click="MenuItem_Click_1"/>
             </MenuItem>
         </Menu>
     </Grid>
