--- a/UI/cAportes.xaml
+++ b/UI/cAportes.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:P1_AP1_Junior_20190009.UI"
         mc:Ignorable="d"
-        Title="cAportes" Height="450" Width="800">
+        Title="cAportes" Height="609" Width="624">
     <Grid>
         <StackPanel Orientation="Vertical" Margin="10,5,10,0">
 
@@ -20,6 +20,8 @@
                     <DatePicker x:Name="HastaDatePicker"/>
                 </StackPanel>
 
+            </StackPanel>
+            <StackPanel Orientation="Horizontal">
                 <StackPanel Margin="5,0">
                     <Label Content="Filtro:" />
                     <ComboBox x:Name="FiltroComboBox" Width="100">
@@ -34,7 +36,7 @@
 
                 </StackPanel>
 
-                <Button x:Name="BuscarButton" Height="34" Width="93" Click="BuscarButton_Click" >
+                <Button x:Name="BuscarButton" Height="34" Width="93" Click="BuscarButton_Click" Margin="10,0">
                     <StackPanel Orientation="Horizontal" >
                         <Image Source="/UI/simbolo-de-interfaz-de-lupa-de-busqueda.png" Stretch="Fill"  />
                         <Label Content="Buscar" />
@@ -42,7 +44,7 @@
                 </Button>
 
             </StackPanel>
-            <StackPanel HorizontalAlignment="Left" >
+            <StackPanel HorizontalAlignment="Left" Margin="0,15">
                 <DataGrid x:Name="DatosDataGrid" Height="350" Width="527" AutoGenerateColumns="False" IsReadOnly="True">
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="aporteID" Binding="{Binding aporteID}"/>
@@ -56,10 +58,10 @@
 
             <StackPanel Orientation="Horizontal">
                 <Label x:Name="ConteoLabel" Content="Conteo: " />
-                <TextBox x:Name="ConteoTextBox" Height="30" Width="70" Margin="10,5,0,0"/>
+                <TextBox x:Name="ConteoTextBox" Height="30" Width="70" Margin="10,5,0,0" IsReadOnly="True"/>
 
                 <Label x:Name="MontoLabel" Content="Monto: " Margin="250,0,0,0"/>
-                <TextBox x:Name="MontoTextBox" Height="30" Width="70" Margin="10,0,0,0"/>
+                <TextBox x:Name="MontoTextBox" Height="30" Width="70" Margin="10,0,0,0" IsReadOnly="True"/>
             </StackPanel>
         </StackPanel>
 
